--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página de Inicio</title>
+    <link rel="stylesheet" type="text/css" href="styles/common.css" />
   </head>
   <body>
-    <div id="logout-link" class="logout-link">
-      <a href="#" id="logout-button">Cerrar sesión</a>
-    </div>
-    <h1>Sistema de Gestión de Usuarios y Perfiles</h1>
-    <div id="user-info"></div>
-    <p>
-      Esta es la página de inicio. Puedes acceder a las siguientes secciones:
-    </p>
+    <nav id="navigation-menu" class="navigation-menu">
+      <div id="logout-link" class="logout-link">
+        <a href="#" id="logout-button">Cerrar sesión</a>
+      </div>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./pages/users-list.html">Lista de Usuarios</a></li>
+        <li><a href="./pages/user.html">Usuario</a></li>
+        <li><a href="./pages/profile.html">Perfil</a></li>
+      </ul>
+    </nav>
 
-    <ul>
-      <li><a href="./pages/users-list.html">Lista de Usuarios</a></li>
-      <li><a href="./pages/user.html">Usuario</a></li>
-      <li><a href="./pages/profile.html">Perfil</a></li>
-    </ul>
+    <div class="container">
+      <h1>Sistema de Gestión de Usuarios y Perfiles</h1>
+      <div id="user-info"></div>
+      <p>
+        Esta es la página de inicio. Puedes acceder a las siguientes secciones:
+      </p>
+      <ul class="index-menu">
+        <li><a href="./pages/users-list.html">Lista de Usuarios</a></li>
+        <li><a href="./pages/user.html">Usuario</a></li>
+        <li><a href="./pages/profile.html">Perfil</a></li>
+      </ul>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
