--- a/pages/login.html
+++ b/pages/login.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/common.css">
     <title>Iniciar Sesión</title>
   </head>
   <body>
-    <h1>Iniciar Sesión</h1>
-    <form id="login-form">
-      <label for="email">Correo Electrónico:</label>
-      <input type="text" id="email" name="email" required /><br />
+    <div class="container">
+      <h1>Iniciar Sesión</h1>
+      <form id="login-form">
+        <label for="email">Correo Electrónico:</label>
+        <input type="text" id="email" name="email" required /><br />
 
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required /><br />
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required /><br />
 
-      <button type="submit">Iniciar Sesión</button>
-    </form>
+        <button type="submit">Iniciar Sesión</button>
+      </form>
 
-    <a href="./register.html">Crear una cuenta</a>
-
+      <a class="simple-link" href="./register.html">Crear una cuenta</a>
+    </div>
     <script src="../scripts/login.js"></script>
   </body>
 </html>
