--- a/pages/register.html
+++ b/pages/register.html
@@ -3,25 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/common.css" />
     <title>Registro de Usuario</title>
   </head>
   <body>
-    <h1>Registro de Usuario</h1>
-    <form id="registration-form">
-      <label for="username">Nombre de usuario:</label>
-      <input type="text" id="username" required />
+    <div class="container">
+      <h1>Registro de Usuario</h1>
+      <form id="registration-form">
+        <label for="username">Nombre de usuario:</label>
+        <input type="text" id="username" required />
 
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" required />
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" required />
 
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" required />
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" required />
 
-      <button type="submit">Registrar</button>
-    </form>
+        <button type="submit">Registrar</button>
+      </form>
 
-    <a href="./login.html">Iniciar sesión</a>
-
+      <a class="simple-link" href="./login.html">Iniciar sesión</a>
+    </div>
     <script src="../scripts/register.js"></script>
   </body>
 </html>
