Se agregaron los estilos

--- a/pages/register.html
+++ b/pages/register.html
@@ -22,7 +22,10 @@
         <button type="submit">Registrar</button>
       </form>
 
-      <a class="simple-link" href="./login.html">Iniciar sesión</a>
+      <div class="link-container">
+        <a class="simple-link" href="./login.html">Iniciar sesión</a>
+      </div>
+
     </div>
     <script src="../scripts/register.js"></script>
   </body>
