--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/common.css">
+    <link rel="stylesheet" href="../styles/common.css" />
     <title>Iniciar Sesión</title>
   </head>
   <body>
@@ -19,7 +19,9 @@
         <button type="submit">Iniciar Sesión</button>
       </form>
 
-      <a class="simple-link" href="./register.html">Crear una cuenta</a>
+      <div class="link-container">
+        <a class="simple-link" href="./register.html">Crear una cuenta</a>
+      </div>
     </div>
     <script src="../scripts/login.js"></script>
   </body>
